--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
 	},
 	"authors": [
 		{
-			"name": "Leonardo Cangussu",
-			"email": "leo@teste.com.br"
+			"name": "Jorge Sant Ana",
+			"email": "jorge@teste.com.br"
 		}
 	],
 	"autoload": {
